feat: sync private retelling recordings
